se agregan fotos del equipo en pagina principal
favor de subirse

--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
                         <li><a href="" class="nav-item">Carrito</a></li>
                         <li><a href="" class="nav-item">Login</a></li>
                   </ul>
-                 
-                 
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
 </nav>
@@ -164,24 +162,24 @@
                                   <!-- Wrapper for slides -->
                                   <div class="carousel-inner" role="listbox">
                                     <div class="item active">
-                                      <img src="../bicycling/images/avatar_01.jpg" alt="Client01">
+                                      <img src="images/new_icons_02.png" alt="Client01">
                                       <div class="performer-caption">
                                         <h2>Adrian Koussa <span class="job"> Dueño </span></h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid facere vero amet quaerat eos quia. Nulla veritatis reprehenderit molestiae aperiam, </p>
+                                        <p>Adrian es codirector del equipo. Ha estado diseñando y creando juegos durante años, creando mundos locos para que la gente husmee y explore. Le encantan los juegos desde que su papá encontró las botas de alas para él en Zelda 2, y quiere recrear esa experiencia de aventura y emoción para otras personas.</p>
                                       </div>
                                     </div>
                                     <div class="item">
-                                      <img src="../bicycling/images/avatar_02.jpg" alt="Client02">
+                                      <img src="images/new_icons_03.png" alt="Client02">
                                       <div class="performer-caption">
                                         <h2>Mohamed Koussa<span class="job"> Administrador </span></h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid facere vero amet quaerat eos quia. Nulla veritatis reprehenderit molestiae aperiam, </p>
+                                        <p>Mohamed es el codificador supremamente talentoso del Equipo. Mohamed ha estado construyendo los sistemas, ajustando y optimizando y agregando un conjunto de todas las características nuevas y emocionantes. Jack ha trabajado con Team desde hace algún tiempo, siendo fundamental en los lanzamientos de consola de Hollow Knight y en el desarrollo de su gran paquete final de contenido gratuito, Godmaster.</p>
                                       </div>
                                     </div>
                                     <div class="item">
-                                      <img src="../bicycling/images/avatar_03.jpg" alt="Client03">
+                                      <img src="images/new_icons_01.png" alt="Client03">
                                       <div class="performer-caption">
                                         <h2>Monika Kuznetsov <span class="job"> Gerente</span></h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid facere vero amet quaerat eos quia. Nulla veritatis reprehenderit molestiae aperiam, </p>
+                                        <p>Monika es codirector del equipo Cherry. Anteriormente dirigió el estudio de animación Mechanical Apple y ha trabajado en innumerables proyectos en películas, juegos y videos musicales. Monika ha estado modificando juegos desde antes de que las computadoras fueran en color y le encantan desde su primer alquiler de juegos: Faxanadu para NES.</p>
                                       </div>
                                     </div>
                                    </div>
